I made the site ever so slightly more pretty with some css stuff

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,8 +7,10 @@
 </ul>
 <% end %>
 
+
+<h2>You can add another below:</h2>
 <%= simple_form_for([@list, @bookmark]) do |f| %>
   <%= f.input :comment %>
   <%= f.association :movie %>
-  <%=  f.submit "Add it on" %>
+  <%= f.submit "Add it on" %>
 <% end %>
