--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,17 @@
-<% @lists.each do |list| %>
-<ul>
-  <li>
-    <%= link_to list.name, list_path(list.id) %>
-  </li>
-</ul>
-<% end %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/7991225/pexels-photo-7991225.jpeg);">
+  <div class="container">
+    <h1>Choose <strong>your list</strong> of <strong>movies</strong>!</h1>
+    <p>Create a new one by clicking the button below!</p>
+    <a class="btn btn-flat" href="#">Create a List!</a>
+  </div>
+</div>
+
+<div class="container mt-4">
+  <div class="row">
+    <% @lists.each do |list| %>
+      <div class="card-category">
+        <%= link_to list.name, list_path(list.id), class: "link" %>
+      </div>
+    <% end %>
+  </div>
+</div>
