button and banner fixes

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/7991225/pexels-photo-7991225.jpeg);">
   <div class="container">
     <h1>Choose <strong>your list</strong> of <strong>movies</strong>!</h1>
-    <p>Create a new one by clicking the button below!</p>
+    <p>Or create a new one by clicking the button below!</p>
     <a class="btn btn-flat" href="#">Create a List!</a>
   </div>
 </div>
