--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <h1>Choose <strong>your list</strong> of <strong>movies</strong>!</h1>
     <p>Or create a new one by clicking the button below!</p>
+    <p>But actually don't because nothing works!!!</p>
     <a class="btn btn-flat" href="#">Create a List!</a>
   </div>
 </div>
